# BebraLand-Launcher-Frontend

./: .gitignore  BebraLandLauncher.spec  BebraLandUpdater.spec  README.md  build_frontend.bat  build_frontend.sh  build_setup.bat  launcher_updater.py  nuitka_test.bat  pyproject.toml  run_dev_with_logs.bat
.github/workflows/: release.yml
hooks/: hook-PySide6.QtQml.py
installer/: BebraLandLauncher.iss
resources/qml/: Main.qml
resources/qml/components/: BackButton.qml  GmlButton.qml  SharpImage.qml  Sidebar.qml
resources/qml/pages/: HomePage.qml  LoginPage.qml  ModsPage.qml  ProfilePage.qml  SettingsPage.qml
scripts/: build_exe.ps1  build_installer.ps1  write_build_info.py
src/bebraland_frontend/: app.py  config.py  runtime.py  updater.py
